# minchir

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm.ci  README.md  TODOS.md
.github/: release.yml
.github/workflows/: ci.yml
app/: build.gradle
app/assets/config/: config.yaml
app/assets/templates/: 404.vtl  500.vtl  consent.vtl  login.vtl
app/native-image/: .gitignore  Dockerfile  README.md
app/native-image/agent-config/: access-filter.json
assets/config/: config.yaml
assets/i18n/: translations.yaml
assets/scopes/: scopes.yaml
assets/templates/: 400.html  404.html  500.html  consent.html  login.html  logout.html
docker/: README.md  docker-compose.yml  ldaprc
docker/certs/: 01-rootCA.conf  01-rootCA.crt  01-rootCA.der  01-rootCA.key  01-rootCA.srl  02-intermediate-a.conf  02-intermediate-a.crt  02-intermediate-a.csr  02-intermediate-a.der  02-intermediate-a.ext  02-intermediate-a.key  02-intermediate-a.srl  03-intermediate-b.conf  03-intermediate-b.crt  03-intermediate-b.csr  03-intermediate-b.der  03-intermediate-b.ext  03-intermediate-b.key  03-intermediate-b.srl  04-server-chain.crt  04-server.conf  04-server.crt  04-server.csr  04-server.der  04-server.ext  04-server.key  README.md  cabundle.crt  truststore.jks
docker/dummyapp/: index.html
docker/glauth/: config.cfg
docker/hydra/: bootstrap.sh  hydra.yaml
docker/openldap/: init.ldif
resources/: test_config_01.yaml
resources/settings/config/: missing_attr.yaml  normalize_config.yaml  test_config_01.yaml  test_config_02.yaml  test_config_03.yaml
resources/settings/i18n/: translations2.yaml  translations3.yaml
resources/settings/scopes/: scopes2.yaml
resources/settings/yaml_helper/: merge_yaml_02.yaml  merge_yaml_03.yaml  merge_yaml_04.yaml
src/: cli.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  settings.rs
src/handlers/: consent.rs  csrf.rs  login.rs  logout.rs
src/middleware/: accept_language.rs  ldap.rs
src/settings/: config.rs  scopes.rs  translations.rs  yaml_helper.rs
tests/: int_tests.rs
tests/test_util/: hydra.rs  minchir.rs  mod.rs
trash/: settings.gradle
(+117 files in other folders)
